AI生成新的搜索查询方法

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+Assets/
+.trae/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
